fix table overflow bug

--- a/one/polygon/static/css/first.css
+++ b/one/polygon/static/css/first.css
@@ -1,7 +1,3 @@
-main {
-    text-align: center;
-}
-
 .p5Canvas {
     text-align: center;
 }
@@ -10,28 +6,57 @@ main {
 .light {
     background-color: black;
     height: 100vh;
+    display: table;
+    width: 100%;
+}
+
+.light_logs {
+  background-color: black;
+  height: 100vh;
+  display: table;
+  width: 100%;
+}
+
+.light main {
+  text-align: center;
+  background-color: black;
+  
 }
 
 .light .zab_div {
-    font-size: 54px; 
+    font-size: 40px; 
     color: white; 
-    display: inline-block; 
-    margin-right: 100px; 
+
+    margin-top: 86px;
+    /* display: inline-block;  */
+    position: sticky;
+    top: 50px;
+    /* position: fixed; */
+    float: right;
+
+    margin-right: 140px; 
     border-left: 3px solid transparent; 
     border-color: white; 
-    height: 100%; 
+    /* height: 100%;  */
     padding:15px;
 }
 
-.light .logs .table {
+/* .light .logs {
+  background-color: black;
+} */
+
+.light .table {
     margin-top: 50px;
     text-align: center;
     color: white;
     background-color: black;
-
     width: 1250px; 
-    margin-right: 175px; 
-    display: inline-block;
+    margin-left: 20px; 
+    /* display: inline-block; */
+    float: left;
+    /* table-layout:fixed;
+    height:100%; */
+    
 }
 
 /* network topology div class */
@@ -42,6 +67,7 @@ main {
     display:inline-block;
     clip-path: inset(0 1.3ch 0 0);
     animation: l 1s steps(6) infinite;
+    background-color: black;
   }
   
   @keyframes l {
@@ -126,27 +152,42 @@ main {
     height: 100vh;
 }
 
-.dark .zab_div {
-    /* margin-top: 50px; */
-    font-size: 54px; 
-    color: black; 
-    display: inline-block; 
-    margin-right: 100px; 
-    border-left: 3px solid transparent; 
-    border-color: black; 
-    height: 100%; 
-    padding:15px;
+.light main {
+  text-align: center;
+  background-color: white;
 }
 
-.dark .logs .table {
-    margin-top: 50px;
-    text-align: center;
-    color: black;
-    background-color: white;
+.dark .zab_div {
+  font-size: 40px; 
+  color: black; 
 
-    width: 1250px; 
-    margin-right: 175px; 
-    display: inline-block;
+  margin-top: 86px;
+  /* display: inline-block;  */
+  position: sticky;
+  top: 50px;
+  /* position: fixed; */
+  float: right;
+
+  margin-right: 140px; 
+  border-left: 3px solid transparent; 
+  border-color: black; 
+  /* height: 100%;  */
+  padding:15px;
+}
+
+/* .dark .logs {
+  background-color: white;
+} */
+
+.dark .table {
+  margin-top: 50px;
+  text-align: center;
+  color: black;
+  background-color: white;
+  width: 1250px; 
+  margin-left: 20px; 
+  /* display: inline-block; */
+  float: left;
 }
 
 /* network topology div class */
@@ -240,7 +281,7 @@ body::-webkit-scrollbar {
    
 body::-webkit-scrollbar-track {
     box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.3);
-    background-color: #f9f9fd;
+    background-color: black;
   }
    
 body::-webkit-scrollbar-thumb {
